welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:13: error: ')' expected but 'else' found.
else if(Math.abs(n)>189) {
^